--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -20,8 +20,7 @@
     </header>
     <main>
         <h2>Event Schedule</h2>
-
-        <table border="1">
+        <table>
             <caption>Detailed Schedule of Events for TechCon 2024</caption>
             <thead>
                 <tr>
@@ -30,38 +29,32 @@
                     <th scope="col">Speaker</th>
                 </tr>
             </thead>
-
             <tbody>
                 <tr>
                     <td>9:00 AM – 10:00 AM</td>
                     <td>Opening Keynote: The Future of AI</td>
                     <td>Dr. Aisha Raman</td>
                 </tr>
-
                 <tr>
                     <td>10:15 AM – 11:00 AM</td>
                     <td>Cybersecurity in 2024</td>
                     <td>Elena Cruz</td>
                 </tr>
-
                 <tr>
                     <td>11:15 AM – 12:00 PM</td>
                     <td>Building Ethical Tech</td>
                     <td>Marcus Trent</td>
                 </tr>
-
                 <tr>
                     <td>1:00 PM – 2:00 PM</td>
                     <td>Panel Discussion: Innovation in Africa</td>
                     <td>Various Speakers</td>
                 </tr>
-
                 <tr>
                     <td>2:15 PM – 3:00 PM</td>
                     <td>Hands-On Workshop: Cloud Computing</td>
                     <td>Sarah Kim</td>
                 </tr>
-
                 <tr>
                     <td>3:15 PM – 4:00 PM</td>
                     <td>Networking & Startup Pitch</td>
@@ -69,11 +62,9 @@
                 </tr>
             </tbody>
         </table>
-
     </main>
     <footer>
         <p>&copy; 2024 TechCon Conference. All rights reserved. Copyright.</p>
     </footer>
-
 </body>
 </html>
